--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
             <div id="score">Score: 0</div>
         </div>
         <canvas id="game-canvas"></canvas>
+        <!-- Кнопки управления под землей -->
+        <div class="game-arrows">
+            <div class="arrow-btn" id="left-arrow">&#8592;</div>
+            <div class="arrow-btn" id="right-arrow">&#8594;</div>
+        </div>
         <div id="game-over-screen" style="display: none;">
             <h2 id="game-over-message"></h2>
             <button id="restart-button">Play Again</button>
